# Nexar

./: .env.contracts  .gitignore  BLUETOOTH_PAYMENTS.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  DEPLOY_FROM_VERCEL_DASHBOARD.md  README.md  deploy-manual.ps1  deploy.sh  package-lock.json  package.json  test-build.js
ai-agent/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  package.json  render.yaml
ai-agent/src/: commandParser.ts  index.ts  paymentAgent.ts  realStellarClient.ts  simpleCommandParser.ts  stellarClient.real.ts  stellarClient.ts  types.ts
api/: package.json
api/prisma/: schema.prisma
contracts/multi_asset_router/: Cargo.toml
contracts/multi_asset_router/src/: lib.rs
contracts/social_pay/: Cargo.toml
contracts/social_pay/src/: lib.rs
contracts/stellar_agent_pay/: Cargo.toml
contracts/stellar_agent_pay/src/: lib.rs
crates/stellar-registry-cli/: Cargo.toml
crates/stellar-scaffold-cli/: Cargo.toml
crates/stellar-scaffold-macro/: Cargo.toml
database/: schema.sql
docs/images/: .gitkeep  README.md
frontend/: BRAND_ASSETS.md  FEATURES_COMPLETE.md  NEW_FEATURES.md  TEXT_COLORS_GUIDE.md  VISIBILITY_FIX_SUMMARY.md  fix-text-colors.ps1  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.backup.tsx  App.simple.tsx  App.tsx  index.css  types.ts  vite-env.d.ts
scripts/: deploy-node.js  deploy-testnet.ps1  deploy-testnet.sh  diagnose.ps1  fix-blank-screen.ps1  test-deployment.ps1  use-mock-stellar.ps1  use-real-stellar.ps1  use-wallet-kit.ps1  verify-wallet-kit.ps1
(+41 files in other folders)
