[package]
name = "stellar_agent_pay"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
admin-sep = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }